--- a/Fundamentar/contact.html
+++ b/Fundamentar/contact.html
@@ -22,5 +22,19 @@
             </li>
         </ul>
     </nav>
+
+    <h1>Contato</h1>
+
+    <p>Fale comigo</p>
+
+    <ul>
+        <li>
+            <a href="mailto:deivisonsoares1610@outlook.com">Email</a>
+        </li>
+
+        <li>
+            <a href="tel:+5522992533137">Telefone: (22)9 9253-3137</a>
+        </li>
+    </ul>
 </body>
 </html>
