--- a/Fundamentar/files/images.html
+++ b/Fundamentar/files/images.html
@@ -4,23 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contato</title>
+    <title>Imagens</title>
 </head>
 <body>
     <nav>
         <ul>
             <li>
-                <a href="index.html">Homepage</a>
+                <a href="../index.html">Homepage</a>
             </li>
 
             <li>
-                <a href="files/images.html">Minhas Imagens</a>
+                <a href="images.html">Minhas Imagens</a>
             </li>
 
             <li>
-                <a href="contact.html">Contato</a>
+                <a href="../contact.html">Contato</a>
             </li>
         </ul>
     </nav>
+
+    <h1>Minhas Imagens</h1>
+
+    <p>Olha isso!</p>
+
+    <p>
+        <img src="./1.jpeg" alt="Imagem 1">
+        <img src="./2.jpeg" alt="Imagem 2">
+    </p>
 </body>
 </html>
