--- a/Discover/index.html
+++ b/Discover/index.html
@@ -7,6 +7,7 @@
     <title>Guia Estelar JavaScript</title>
 </head>
 <body>
-    <script src="scripts.js"></script>
+
+    <script src="js/scripts4.js"></script>
 </body>
 </html>
